--- a/SpringSecOAUTHOkta/src/main/resources/application.properties
+++ b/SpringSecOAUTHOkta/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 okta.oauth2.issuer=https://dev-02229668.okta.com/oauth2/default
-okta.oauth2.client-id=0oa2xcapf4fryt0IA5d7
-okta.oauth2.client-secret=pHv-5Tkh7wn67F8GHogstWQoMTOerRb-4XkS4Bu3
+okta.oauth2.client-id=
+okta.oauth2.client-secret=
 okta.oauth2.redirect-uri=/authorization-code/callback
 
 server.port=8088
